[package]
name = "sib-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.37", features = ["macros", "serde", "serde-arbitrary-precision"] }
http = "1.4"
url = "2.5.7"


[features]
